# ClawRouter-Hermes

./: .gitignore  README.md  pyproject.toml
docs/: 01-vision-analyze-connection-error-custom-provider.md  02-oauth-vision-provider-falls-back-to-auto.md  03-one-endpoint-gpt-claude-gemini-deepseek.md  04-pay-per-call-llm-no-api-keys-hermes.md  05-proxy-vpn-timeouts-premature-close.md  06-invalid-character-header-cyrillic-reasoning.md
scripts/: install.sh  verify_derivation.mjs
src/clawrouter_hermes/: __init__.py  cli.py  commands.py  models.py  plugin.yaml  proxy_supervisor.py  schemas.py  state.py  tools.py  wallet.py
src/clawrouter_hermes/provider_template/: init.py.tmpl  plugin.yaml
src/clawrouter_hermes/skills/clawrouter/: SKILL.md
tests/: conftest.py  test_commands.py  test_doctor_checks.py  test_live_rpc.py  test_provider_template.py  test_proxy_supervisor.py  test_state.py  test_telegram_labels.py  test_tools.py  test_wallet.py
