[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-clawrouter"
version = "0.3.4"
description = "ClawRouter for Hermes — 55+ models, x402 USDC micropayments, smart routing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "BlockRun" }
]
requires-python = ">=3.9"
keywords = ["hermes", "hermes-agent", "clawrouter", "x402", "llm-router", "blockrun"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "bip_utils>=2.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.entry-points."hermes_agent.plugins"]
clawrouter = "clawrouter_hermes"

[project.scripts]
hermes-clawrouter = "clawrouter_hermes.cli:main"

[project.urls]
Homepage = "https://github.com/BlockRunAI/ClawRouter"
Repository = "https://github.com/BlockRunAI/ClawRouter-Hermes"
"Bug Tracker" = "https://github.com/BlockRunAI/ClawRouter-Hermes/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawrouter_hermes = [
    "plugin.yaml",
    "provider_template/*.yaml",
    "provider_template/*.tmpl",
    "skills/clawrouter/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
